--- a/dev/index.html
+++ b/dev/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grow Branches</title>
+    <style>
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+
+      canvas {
+        width: 100%;
+        height: 100%;
+        background: yellow;
+      }
+    </style>
   </head>
   <body>
-    <script src="../src/index.js"></script>
+    <canvas></canvas>
+    <script src="./bundle.js"></script>
   </body>
 </html>
