--- a/dev/index.html
+++ b/dev/index.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-    <canvas></canvas>
+    <canvas hdpi="on"></canvas>
     <script src="./bundle.js"></script>
   </body>
 </html>
