--- a/dev/index.html
+++ b/dev/index.html
@@ -18,10 +18,17 @@
         height: 100%;
         background: yellow;
       }
+
+      textarea {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
     </style>
   </head>
   <body>
     <canvas hdpi="on"></canvas>
+    <textarea></textarea>
     <script src="./bundle.js"></script>
   </body>
 </html>
